static/common.css
/*
Trivial: Multiplayer trivia online.
Copyright (C) 2026 mOctave

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Affero General Public License as published
by the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Affero General Public License for more details.

You should have received a copy of the GNU Affero General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

html {
	background-color: silver;
	color: black;
	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

h1 {
	font-size: xx-large;
	text-align: center;
}

h2 {
	font-size: larger;
	text-align: center;
}

ol {
	padding-left: 20px;
}

a {
	color: #3882ba;
}

a:hover {
	color: black;
}

.texticon {
	width: 16px;
	height: 16px;
	vertical-align: middle;
}

.fine-print {
	text-align: center;
	font-size: x-small;
	padding-top: 10px;
	color: #555;
}

.error-msg {
	color: #f42 !important;
}

.pfp {
	width: 100%;
	aspect-ratio: 1;
}

/*
MARK: Page Layout
*/
.left-bar {
	left: 0;
	width: 20%;
}

.right-bar {
	right: 0;
	width: 20%;
}

.main-container {
	left: 20%;
	width: 60%;
}

.left-half {
	left: 0;
	width: 50%;
}

.right-half {
	right: 0;
	width: 50%;
}

.left-bar, .right-bar, .main-container, .left-half, .right-half {
	position: absolute;
	top: 60px;
	margin: 0;
	padding: 0;
}

.left-bar>*, .right-bar>*, .main-container>*, .left-half>*, .right-half>* {
	margin: 10px;
}

.content-box {
	border: 2px solid black;
	border-radius: 10px;
	padding: 10px;
	background-color: white;
}

.gold-content-box {
	border: 2px solid black;
	border-radius: 10px;
	padding: 10px;
	background: linear-gradient(rgba(255, 218, 153, 0.9), rgba(221, 153, 34, 0.9)), url("img/metal-bg.jpg");
}

.content-box h2 {
	margin: 0;
	margin-bottom: 10px;
}

/*
MARK: Buttons
*/

.button-highlighted, .button-standard, .button-danger {
	width: calc(100% - 20px);
	border-radius: 10px;
	padding: 10px;
	margin: 10px;
	font-weight: 600;
	border: 2px solid black;
}

.button-highlighted {
	background-color: #8dc;
}

.button-highlighted:hover {
	background-color: #6ba;
}

.button-danger {
	background-color: #f42;
}

.button-danger:hover {
	background-color: #d20;
}

/*
MARK: Navbar
*/

.navbar, .mobile-navbar {
	margin: 0;
	padding: 0;
	background-color: #8c3;
	position: fixed;
	overflow: hidden;
	top: 0;
	left: 0;
	right: 0;
	height: 50px;
	border-bottom: 2px solid black;
	z-index: 1;
}

.navbar {
	display: block;
}

.mobile-navbar {
	display: none;
}

.navright {
	float: right;
	height: 100%;
}

.navitem {
	float: left;
	display: block;
	text-align: center;
	height: calc(100% - 20px);
	margin-left: 10px;
	margin-right: 10px;
	padding: 10px;
	align-content: center;
}

.navitem * {
	vertical-align: middle;
	padding-right: 10px;
}

.navitem, .navitem * {
	color: #000;
	text-decoration: none;
	font-weight: 700;
}

.navitem img {
	height: 30px;
}

.navitem:hover {
	background-color: #8dc;
	border-radius: 3px;
}

.navbar-pfp {
	width: 30px;
	height: 30px;
	border-radius: 10px;
	border: 1px solid black;
	background-color: #6a1;
	padding: 0;
}

.navbar-padding {
	height: 50px;
}

#navmenu-toggle {
	cursor: pointer;
}

#navmenu {
	display: none;
	position: fixed;
	top: 50px;
	right: 0;
	bottom: 0;
	width: 200px;
	transition: linear 0.3s;
	overflow: hidden;
	background-color: #8c3;
}

#navmenu .navitem {
	float: none;
	text-align: right;
	height: 30px;
}

#dropdown-content-user {
	display: none;
	position: absolute;
	z-index: 2;
	top: 50px;
	width: 150px;
	padding: 0;
	right: 0;
	margin-left: 10px;
	background-color: #6a1;
	border: 2px solid black;
	border-bottom-left-radius: 3px;
	border-bottom-right-radius: 3px;
}

#dropdown-content-user .navitem {
	float: none;
	display: block;
	padding: 10px;
	margin: 0;
	border-radius: 3px;
	width: 100%;
	height: 20px;
}

#dropdown-content-user .navitem:hover {
	background-color: #6ba;
	border-radius: 3px;
}

body:has(#dropdown-toggle-user:hover) #dropdown-content-user, #dropdown-content-user:hover {
	display: block;
}

#dropdown-toggle-user:hover .navbar-pfp {
	border-radius: 5px;
	background-color: #6ba;
}

/*
MARK: Forms
*/

.login-line {
	display: flex;
	height: 30px;
	line-height: 30px;
	margin-bottom: 10px;
}

.login-line > * {
	height: 30px;
	margin: 5px;
}

label {
	display: inline-block;
	width: 100px;
}

.login-input {
	display: inline-block;
	width: 100%;
	border: 1px solid black;
	border-radius: 5px;
}

.login-button {
	display: block;
	width: 100%;
	border: 1px solid black;
	border-radius: 5px;
	background-color: #8c3;
	font-weight: bold;
}

.login-button:hover {
	background-color: #8dc;
}

.form-desc {
	color: #555;
	font-size: small;
	margin: 5px;
}


/*
MARK: Decks
*/

.deck-container {
	width: 100%;
}

.deck {
	display: inline-block;
	width: 200px;
	height: 300px;
	border: 4px double black;
	border-radius: 10px;
	background-color: #eff;
	padding: 10px;

	color: black;
	text-decoration: none;
}

.deck:hover {
	background-color: #8dc;
}

.deck-name {
	text-align: center;
	font-weight: bold;
}

.deck-thumb {
	width: 100%;
	height: 240px;
}

.deck-details {
	width: 100%;
	color: #555;
}

.deck-star-toggle {
	width: 20px;
	height: 20px;
	background-image: url("/img/star-unfilled.svg");
	border: none;
	background-color: transparent;
	vertical-align: middle;
}

.deck-star-toggle.active-button {
	background-image: url("/img/star-filled.svg");
}

.deck-star-toggle:hover {
	background-image: url("/img/star-unfilled-hover.svg");
}

.deck-star-toggle.active-button:hover {
	background-image: url("/img/star-filled-hover.svg");
}

.deck-creator {
	float: right;
	font-style: italic;
}

/*
MARK: Cards
*/

.card-container {
	width: 100%;
}

.card {
	display: inline-block;
	width: 200px;
	height: 300px;
	border: 2px solid black;
	border-radius: 10px;
	background-color: #eff;
	padding: 10px;

	color: black;
	text-decoration: none;
}

.card hr {
	color: #eff;
}

.card:hover {
	background-color: #8dc;
}

.card:hover hr {
	color: #8dc;
}

.card-thumb {
	/* TODO: Dynamic resizing */
}

.card-details {
	width: 200px;
	color: #555;
}

.card-creator {
	float: right;
	font-style: italic;
}

/*
MARK: Ranks
*/
.rank-iron {
	color: #833;
}

.rank-bronze {
	color: #d64;
}

.rank-silver {
	color: #777;
}

.rank-gold {
	color: gold;
}

.rank-platinum {
	color: #8c3;
	font-style: italic;
}

.rank-diamond {
	color: #6ba;
	font-weight: bold;
	font-style: italic;
}

.rank-astral {
	color: #a3b;
	font-weight: bold;
	text-decoration: underline wavy #a3b;
}

.rank-master {
	color: black;
	font-family: 'Times New Roman', Times, serif;
	font-weight: bold;
}

.rank-gm {
	border-radius: 5px;
	padding: 2px;
	font-family: 'Times New Roman', Times, serif;
	color: white;
	background-color: black;
	font-weight: bold;
}

/*
Badges
*/

.badge {
	width: 120px;
	height: 150px;
	display: inline-block;
	border-radius: 10px;
}

.badge:hover {
	background-color: #6ba;
}

.badge-icon {
	width: 100%;
	aspect-ratio: 1;
}

.badge-caption {
	font-size: small;
	font-weight: bold;
	font-style: italic;
	text-align: center;
}

[hovertext]:hover::after {
	display: block;
	position: absolute;
	content: attr(hovertext);
	color: white;
	background: black;
	border-radius: 5px;
	padding: 5px;
	font-size: x-small;
	margin-top: 5px;
	opacity: 90%;
	max-width: 110px;
}

/*
MARK: Icon Sets
*/
.icon-card {
	width: 20px;
	height: 20px;
	background-image: url("/img/card-filled.svg");
	border: none;
	background-color: transparent;
	vertical-align: middle;
	display: inline-block;
}


/*
MARK: Mobile Support
*/

@media screen and (max-width: 599px) {
	.navbar {
		display: none;
	}
	.mobile-navbar {
		display: block;
	}
}

